# waingro

./: .gitignore  CLAUDE.md  Containerfile  LICENSE  README.md  pyproject.toml  waingro-test-corpus-spec.md
research/clawhub-audit/: README.md  methodology.md
research/clawhub-audit/data/: summary.json  summary_public.json
scripts/: auto_triage.py  bulk_scan.py  generate_report.py  monitor_disclosure.py  rescan_sus.py  resolve_latest.py  triage.py  triage_prep.py
src/waingro/: __init__.py  cli.py  config.py  models.py  scanner.py
src/waingro/analyzers/: context.py  risk_profile.py  semantic.py  static.py  typosquat.py
src/waingro/data/: c2_blocklist.txt  known_packages.txt
src/waingro/mcp/: __init__.py  batch.py  discovery.py  models.py  parser.py  scanner.py
src/waingro/parsers/: script.py  sections.py  skill.py
src/waingro/reporters/: console.py  json_report.py
src/waingro/rules/: __init__.py  execution.py  exfiltration.py  injection.py  network.py  obfuscation.py  persistence.py  social.py
src/waingro/rules/mcp/: __init__.py  auth.py  cross_tool.py  execution.py  (+8 more)
tests/: conftest.py  test_cli.py  test_corpus.py  test_scanner.py  test_search_skill_content.py
tests/fixtures/: known_good_skills.txt
tests/fixtures/skills/: README.md
tests/test_analyzers/: test_context.py  test_risk_profile.py  test_semantic.py  test_typosquat.py
tests/test_parsers/: test_script.py  test_sections.py  test_skill.py
tests/test_rules/: test_bundled_content.py  test_execution.py  test_exfiltration.py  test_injection.py  test_network.py  test_obfuscation.py  test_persistence.py  test_social.py
(+43 files in other folders)
