[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waingro"
version = "0.4.0"
description = "AI Agent Security Scanner — OpenClaw Skills + MCP Servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Christopher Lusk"}
]
keywords = ["security", "openclaw", "mcp", "model-context-protocol", "ai-agents", "supply-chain", "scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
waingro = "waingro.cli:main"

[project.urls]
Homepage = "https://github.com/north-echo/waingro"
Issues = "https://github.com/north-echo/waingro/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108"]
"tests/fixtures/**" = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
